--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 :root {
-  --col-light-blue: #5d04d9;
+  --col-purple: #5d04d9;
   --col-dark-blue: #03318c;
-  --col-purple: #8C0375;
+  --col-magenta: #8C0375;
   --col-white: #ffffff;
   --col-black: #000000;
+  --background: linear-gradient(0deg, rgba(171,251,252,1) 0%, rgba(34,193,195,1) 27%, rgba(37,188,193,1) 29%, rgba(140,3,117,1) 99%);
 }
 
 * {
@@ -33,7 +34,7 @@ body {
   align-items: center;
   width: 100%;
   height: 96px;
-  background-color: var(--col-light-blue);
+  background-color: var(--col-purple);
 }
 
 .header__logo {
@@ -160,7 +161,7 @@ main {
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 40px 20px;
-  background-color: #c6c0fc;
+  background-color: #f1d4f0;
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -170,8 +171,7 @@ main {
   width: 196px;
   display: flex;
   flex-direction: column;
-  background-color: var(--col-light-blue);
-  border-radius: 10px;
+  background: linear-gradient(0deg, rgba(140,3,117,1) 13%, rgba(45,225,227,1) 100%);
   padding: 10px;
   border: 3px solid var(--col-black);
   box-shadow: -3px 4px 14px 0px;
@@ -219,7 +219,7 @@ main {
 /* footer */
 footer {
   width: 100%;
-  background-color: var(--col-light-blue);
+  background-color: var(--col-purple);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -227,15 +227,15 @@ footer {
   padding: 22px;
 }
 
-.dev__info {
+.own__info {
   color: var(--col-white);
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 600;
 }
 
 .company__info {
   color: var(--col-white);
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 .mensaje__titulo {
@@ -245,7 +245,7 @@ footer {
 }
 
 .mensaje-error {
-  color: var(--col-purple);
+  color: var(--col-magenta);
   font-size: 1.5rem;
   font-weight: bold;
 }
@@ -283,7 +283,7 @@ footer {
     min-height: min-content;
     padding-bottom: 20px;
     scroll-behavior: smooth;
-    scrollbar-color: var(--col-light-blue) var(--col-white);
+    scrollbar-color: var(--col-purple) var(--col-white);
     margin-bottom: 200px;
   }
 
